# slam_performance_modelling

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
docker/: .bash_aliases  .bashrc  Dockerfile  build_docker_image.sh  ros_entrypoint.sh  run_docker_image.sh
install/: install_dependences.sh  install_workspace.sh
launch/: aau_explorer.launch  explore_lite.launch  gazebo.launch  gmapping.launch  ground_truth_map_server.launch  hector_slam.launch  move_base.launch  rosbag_player.launch  rosbag_recorder.launch  rviz.launch  slam_benchmark_supervisor.launch  slam_toolbox_online_async.launch  stage.launch
notebooks/: Untitled.ipynb  best_choice_plots.ipynb  dependency_of_performance_from_parameters_and_environment_features.ipynb  general_stats.ipynb  gp_model_tgs_but_serparate_parameters_and_discrete_metrics.ipynb  gp_model_tgs_cont_AND_parameters.ipynb  gp_model_tgs_cont_but_serparate_parameters_and_discrete_metrics.ipynb  gp_multivariate_model_from_system_features_and_discrete_env_features.ipynb  gp_univariate_model_for_nte_from_system_features_and_descrete_env_feature.ipynb  linear_regression_multivariate_model_for_cpu_usage_from_system_features.ipynb  linear_regression_multivariate_model_for_nte_from_system_features_and_descrete_env_feature.ipynb  linear_regression_univariate_model_for_cpu_usage_from_system_features.ipynb  linear_regression_univariate_model_for_max_memory_from_system_features.ipynb  linear_regression_univariate_model_for_nte_from_system_features_and_descrete_env_feature.ipynb  metrics_distributions.ipynb  model_parameters_only.ipynb  (+5 more)
(+89 files in other folders)
